添加了savi模块的数据定义
By Alex
2016/5/7

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/pages/mysavi/totalView.jsp=UTF-8
 encoding//WebContent/subCSS/readme.txt=GBK
 encoding/<project>=UTF-8
